remove useless tests and use getFirst